--- a/style.css
+++ b/style.css
@@ -7,12 +7,11 @@ body {
 
 .container{
     background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     padding: 20px;
     max-width: 600px;
-    margin: 0 auto;
     border-radius: 5px;
-    margin-top: 50px;
+    margin: 50px auto 0;
 }
 
 h1{
@@ -60,6 +59,4 @@ button:hover{
     margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
-
-
 }
